--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".Welcome"></activity>
+        <activity android:name=".Welcome" />
+        <activity android:name=".add" />
+        <activity android:name=".sub" />
+        <activity android:name=".mult" />
+        <activity android:name=".div" />
+        <activity android:name=".viewall"></activity>
     </application>
 
 </manifest>
