--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sup.administrator.studentapp">
-
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +21,8 @@
         <activity android:name=".sub" />
         <activity android:name=".mult" />
         <activity android:name=".div" />
-        <activity android:name=".viewall"></activity>
+        <activity android:name=".viewall" />
+        <activity android:name=".userlist"></activity>
     </application>
 
 </manifest>
